Fri Sep 13 14:20:10 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/sybdb.h include/syberror.h src/dblib/bcp.c:
	- relocate severity codes from sybdb.h to syberror.h

Fri Sep 13 14:05:56 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/.cvsignore src/pool/.cvsignore:
	- ignore more generated files.

Fri Sep 13 13:57:42 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* include/tds.h.in src/ctlib/ct.c src/dblib/dblib.c
	  src/pool/main.c src/pool/member.c src/tds/login.c
	  src/tds/mem.c src/tds/read.c src/tds/token.c src/tds/util.c
	  src/tds/write.c:
	- Implement tds_close_socket() as requested by Brian.
	- Use same throughout the codebase, wherever a socket is closed.
	- Use -1 instead of 0 as the file descriptor to indicate a closed
	  socket.  0 is a perfectly valid fd, so using it to indicate a
	  closed socket is bad.
	- Use a new macro IS_TDSDEAD(tds) throughout the codebase to check
	  for closed sockets, instead of adhoc expressions like
	  "if (tds && tds->s) { ... }"

Fri Sep 13 10:43:28 EDT 2002	nsc <Nicholas_Castellano@acml.com>
	* src/dblib/unittests/t0022.c:
	- Check status of dbsqlexec() when trying to create procedure in t0022.
	- Don't use temporary stored procedures in t0022.  This feature is
	  specific to MSSQL 7.0 and MSSQL 2000.  Tests should work on
	  Sybase too!

Fri Sep 13 14:52:13 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c src/tds/convert.c:
	- fix dbrettype for variant type and some cleanup
	* src/dblib/unittests/t0022.c: use temporary procedure

Fri Sep 13 08:32:06 EDT 2002	Brian Bruns <camber@ais.org>
	* src/tds/tds.dox: doxygen config file
	* src/tds/mem.c: start doxygen style comments

Fri Sep 13  8:24:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* src/dblib/dblib.c: fix dbcoltype return for nullable bit

Fri Sep 13  8:24:54 CEST 2002	Frediano Ziglio <freddy77@angelfire.com>
	* Makefile.am freetds.spec.in include/Makefile.am: