@@ -21,7 +21,7 @@
 #define _tds_h_
 
 static char rcsid_tds_h[]=
-	 "$Id: tds.h.in,v 1.41 2002/09/13 18:03:22 castellano Exp $";
+	 "$Id: tds.h.in,v 1.42 2002/09/13 19:25:08 freddy77 Exp $";
 static void *no_unused_tds_h_warn[]={rcsid_tds_h, no_unused_tds_h_warn};
 
 #include "tds_configs.h"
@@ -447,6 +447,8 @@ typedef struct tds_column_info {
 	TDS_SMALLINT column_usertype;
 	TDS_SMALLINT column_flags;
 	TDS_INT column_size;
+	/** size written in variable (ie: char, text, binary) */
+	TDS_INT column_cur_size;
 	TDS_INT column_offset;
 	TDS_TINYINT column_namelen;
 	TDS_TINYINT column_varint_size;
@@ -459,7 +461,6 @@ typedef struct tds_column_info {
 	TDS_CHAR *column_lenbind;
 	TDS_SMALLINT column_prec;
 	TDS_SMALLINT column_scale;
-	TDS_INT column_textsize;
 	TDS_INT column_textpos;
 	TDS_INT column_text_sqlgetdatapos;
 	TDS_CHAR column_textptr[16];
@@ -469,8 +470,7 @@ typedef struct tds_column_info {
 	TDS_TINYINT column_writeable;
 	TDS_TINYINT column_identity;
 	TDS_TINYINT column_unicodedata;
-    TDS_CHAR    collation[5];
-	TDS_INT cur_row_size; /* size of this column in the current row */
+	TDS_CHAR    collation[5];
 } TDSCOLINFO;
 
 typedef struct tds_result_info {
