@@ -24,7 +24,7 @@
 #include <ctlib.h>
 #include "tdsutil.h"
 
-static char  software_version[]   = "$Id: ct.c,v 1.28 2002/09/13 18:03:23 castellano Exp $";
+static char  software_version[]   = "$Id: ct.c,v 1.29 2002/09/13 19:25:08 freddy77 Exp $";
 static void *no_unused_var_warn[] = {software_version,
                                      no_unused_var_warn};
 
@@ -553,11 +553,10 @@ CS_DATAFMT srcfmt, destfmt;
 
          if (is_blob_type(curcol->column_type)) {
             src = (unsigned char *)curcol->column_textvalue;
-            srclen = curcol->column_textsize;
          } else {
             src = &(resinfo->current_row[curcol->column_offset]);
-	    srclen = curcol->cur_row_size;
          }
+	 srclen = curcol->column_cur_size;
 
          tdsdump_log(TDS_DBG_INFO1, "%L inside _ct_bind_data() setting source length for %d = %d destlen = %d\n", i, srclen, curcol->column_bindlen);
 
